--- a/Goal.css
+++ b/Goal.css
@@ -10,8 +10,7 @@ body{
     vertical-align  : center;
     flex-wrap       : wrap;
     align-content   : center;
-    
-    font-family     : 'Open Sans', sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  
 }
 header{
@@ -25,22 +24,21 @@ header{
     text-align: center;
 }
 
-
 .head{
     color:white;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
+
 }
 .team{
     padding: 6px;
 }
 .box{
+    position:absolute;
   display         : flex;
   justify-content : space-between;
   width   : 400px;
   height  : 400px;
   padding : 5px;
   border  : 1px solid #e4e4e4;
-    position:absolute;
     top:50%;
     left:50%;
      margin-top:-140px; /* this is half the height of your div*/
@@ -69,34 +67,61 @@ header{
     padding     : 20px;
  }
  .player1{
-
     width   : 200px;
-    height  : 200px;
+    height  : 160px;
     padding : 5px;
     background-color:rgb(0, 0, 0,.4);
       position:absolute;
       text-align: center;
       color: white;
-      top:60%;
+      top:70%;
       left:83%;
        margin-top:-140px;
     margin-left:-200px;  
- }
- 
- .player2{
   
+ }
+ .player2{
     width   : 200px;
-    height  : 200px;
+    height  : 160px;
     padding : 5px;
     background-color:rgb(0, 0, 0,.4);
       position:absolute;
       text-align: center;
       color: white;
-      top:60%;
+      top:70%;
       left:30%;
        margin-top:-140px;
-    margin-left:-200px;  
+    margin-left:-200px;
+    
 } 
+.player1.score{
+    top:60%;
+    height  : 60px;
+    text-align: center;
+   font-size: 20px;
+}
+.player2.score{
+    top:60%;
+    height  : 60px;
+    text-align: center;
+    font-size: 20px;
+}
+.clearfix {
+    overflow: auto;
+  }
+  .buttonNew{
+    position: absolute;
+    bottom: 20px;
+    height: 5%;
+    width: 30%;
+    background-color:rgb(0, 0, 0,.4);
+    border  : 1px solid rgb(228, 228, 228,.5);
+    color: white;
+  }
+  .black{
+    background-color:rgb(0, 0, 0,.6);
+  }
+ 
 #afc{}
 #ufc{}
 #fcb{}
@@ -105,6 +130,18 @@ header{
 #hfc{}
 #ahfc{}
 #itfc{}
-#score{
-    vertical-align: bottom;
+#score0{
+ 
 }
+#score1{
+ 
+}
+#square0{}
+#square1{}
+#square2{}
+#square3{}
+#square4{}
+#square5{}
+#square6{}
+#square7{}
+#square8{}
