--- a/Goal.css
+++ b/Goal.css
@@ -11,25 +11,21 @@ body{
     flex-wrap       : wrap;
     align-content   : center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
- 
+  margin: 0 auto;
 }
 header{
-    background-color:rgb(0, 0, 0,.6);
-    width: 1500px;
-    height: 70px;
-    padding: 10px;
+    background-color:rgb(0, 0, 0,.4);
+    height: 80px;
+  width: 100%;
     display: flex;
     justify-content: center;
     align-content: center;
     text-align: center;
 }
 
-.head{
-    color:white;
-
-}
 .team{
     padding: 6px;
+    margin: 6px 0px 0px 0px;
 }
 .box{
     position:absolute;
@@ -145,3 +141,4 @@ header{
 #square6{}
 #square7{}
 #square8{}
+
