--- a/Goal.css
+++ b/Goal.css
@@ -1,9 +1,60 @@
+/* style landing page */
+
+#h1landing{
+  
+font-weight: bold;
+font-size: 2.5em;
+
+}
+#landimg{
+      position:absolute;
+      text-align: center;
+      top:-45px;
+      left:95%;
+      width   : 20%;
+      height  :200%;
+     
+
+}
+#landHeader{
+    background-color:rgb(0, 0, 0,.5);
+    color       : #e4e4e4;
+    position: absolute;
+    text-align: center;
+    justify-content: center;
+    top:45%;
+    left:1%;
+    width   : 85%;
+    height  : 100px;
+    border-radius: 20px;
+
+}
+#land{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    width   : 20%;
+    height  : 50px;
+    margin: 5px;
+    font-size: 20px;
+    font-weight: bold;
+    border: 0;
+    border-radius: 20px;
+    background: none;
+    -webkit-appearance: none;
+
+  color:white;
+background-color:rgb(0, 0, 0,.6);
+
+
+ 
+}
+
+/* style main page */
 * {
     box-sizing: border-box;
   }
 body{
     background-image: url(img/12.jpg);
-    background-size: 97%;
+    background-size: 100%;
     display         : flex;
     align-items     : center;
     justify-content : center;
@@ -121,6 +172,17 @@ header{
     border  : 1px solid rgb(228, 228, 228,.5);
     color: white;
   }
+
+  #buttonHalf{
+  margin: 0% 0% 2.5% 0%;
+  position: absolute;
+    bottom: 20px;
+    height: 5%;
+    width: 30%;
+    background-color:rgb(0, 0, 0,.4);
+    border  : 1px solid rgb(228, 228, 228,.5);
+    color: white;
+  }
    /* make each squere black when click on it or pass through it */
   .black{
     background-color:rgb(0, 0, 0,.6);
@@ -161,5 +223,4 @@ header{
 
 
 #no{
-
 }
